# VitIA

./: .coverage  .gitignore  alembic.ini  makefile  pyproject.toml  requirements.txt
.hypothesis/constants/: 1b71fdfd0b633d70  3dc08b3abe2248f9  4c5f49fb311d3f83  54e759815dd16531  56be63be9f908902  5e1d4af8d9582597  6635f86bea32dc04  7d1e585bfc67cebf  7d770a6bea7f145b  86b85ac54f003de4  8a2707f91870b70e  9eeeb34fba2a285c  a18ff31d1dee2243  bd388a595b173f38  cf5dfe2528c169a5  (+4 more)
alembic/: env.py
backend/: .env  .env.example  debug_imagekit.py  debug_log.txt  pyproject.toml  reporte_rendimiento.txt
backend/.hypothesis/constants/: 1b71fdfd0b633d70  3dc08b3abe2248f9  3ecb79e73cc2e53d  4c5f49fb311d3f83  54e759815dd16531  56be63be9f908902  5e1d4af8d9582597  7d1e585bfc67cebf  7d770a6bea7f145b  86b85ac54f003de4  8a2707f91870b70e  9eeeb34fba2a285c  a18ff31d1dee2243  bd388a595b173f38  cf5dfe2528c169a5  d8950b55f6d97287  da39a3ee5e6b4b0d  f0e72d7387c10482  f942a65cbfb61b7f
backend/app/: auth.py  config.py  crud.py  database.py  main.py  models.py  schemas.py  security.py  supabase_client.py
backend/app/api/: routes_health.py
backend/app/ia/: model_loader.py
backend/app/models/: variedad.py
backend/app/routes/: ml_routes.py  routes_auth.py  routes_coleccion.py  routes_comentarios.py  routes_health.py  routes_publicacion.py  routes_users.py  routes_variedad_biblioteca.py
backend/app/services/: imagekit_service.py
backend/app/tests/: conftest.py  test_coleccion_security.py  test_identificacion.py  test_variedades_auto.py
frontend/: .gitignore  README.md  pubspec.yaml
(+60 files in other folders)
